--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <p>Add new Servers or blueprints!</p>
+      <p>Add new Servers or Blueprints!</p>
+      <br />
       <label>Server Name</label>
       <input type="text" class="form-control" [(ngModel)]="newServerName">
+      <br />
       <label>Server Content</label>
       <input type="text" class="form-control" [(ngModel)]="newServerContent">
-      <br>
+      <br />
       <button
         class="btn btn-primary"
-        (click)="onAddServer()">Add Server</button>
+        (click)="onAddServer()">Add Server</button>&nbsp;
       <button
         class="btn btn-primary"
         (click)="onAddBlueprint()">Add Server Blueprint</button>
