--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <p>Add new Servers or Blueprints!</p>
+      <h3>Add new Servers or Blueprints!</h3>
       <br />
       <label>Server Name</label>
       <input type="text" class="form-control" [(ngModel)]="newServerName">
